--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             background-color: #c0392b;
         }
         #reset-button {
-            background-color: #3498db;
+            background-color: #2ecc71;
             cursor: pointer;
             display: none;
         }
