--- a/rules.html
+++ b/rules.html
@@ -53,12 +53,12 @@
             <h2>コンテストのルール</h2>
             <p>ここに数学コンテストのルールを記載します。</p>
             <ul>
-                <li>問題は全部で4問あります。</li>
+                <li>問題は全部で5問あります。</li>
                 <li>各問題の正解にはポイントが付与されます。</li>
-                <li>正解までの時間が記録されます。</li>
-                <li>最終的なランキングはポイントと時間で決まります。</li>
-                <li>不正解の場合、ペナルティ時間が加算されます。</li>
-                <li>管理者はデータをリセットできます。</li>
+                <li>正解までのタイムが記録されます。</li>
+                <li>最終的なランキングはよりポイントが高、より正解タイムが早い人が上位になります。</li>
+                <li>不正解の場合、間違えるごとにペナルティ時間5分が加算されます。</li>
+                <li>ニックネームは統一してください。</li>
             </ul>
         </div>
     </div>
