--- a/rules.html
+++ b/rules.html
@@ -56,7 +56,7 @@
                 <li>問題は全部で5問あります。</li>
                 <li>各問題の正解にはポイントが付与されます。</li>
                 <li>正解までのタイムが記録されます。</li>
-                <li>最終的なランキングはよりポイントが高、より正解タイムが早い人が上位になります。</li>
+                <li>最終的なランキングはよりポイントが高く、より正解タイムが早い人が上位になります。</li>
                 <li>不正解の場合、間違えるごとにペナルティ時間5分が加算されます。</li>
                 <li>ニックネームは統一してください。</li>
             </ul>
