--- a/rules.html
+++ b/rules.html
@@ -51,9 +51,9 @@
         </div>
         <div class="rules">
             <h2>コンテストのルール</h2>
-            <p>ここに数学コンテストのルールを記載します。</p>
             <ul>
-                <li>問題は全部で5問あります。</li>
+                <li>問題は全部で12問あります。</li>
+                <li>高度な計算機やグラフツールの使用は厳禁です。</li>
                 <li>各問題の正解にはポイントが付与されます。</li>
                 <li>正解までのタイムが記録されます。</li>
                 <li>最終的なランキングはよりポイントが高く、より正解タイムが早い人が上位になります。</li>
