--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <script>
       let questions = [
     null, // インデックス0は使用しないため、nullを設定
-    { question: "泉館山高校の校章とは, $27$個の合同な正方形を問題図のように並べたものである. $\angle{AB\Ganma}+\angle{XYZ}$を求めよ. ", answer: "180", difficulty: "Easy" },
+    { question: "泉館山高校の校章とは, $27$個の合同な正方形を問題図のように並べたものである. $\\angle{AB\Ganma}+\\angle{XYZ}$を求めよ. ただし, $\\angle{XYZ}$で\\angle{XYZ}の大きさを表すものとする. ", answer: "180", difficulty: "Easy" },
     { question: "$$10 - 5 = ?$$", answer: "5", difficulty: "Easy" },
     { question: "$$3 \\times 3 = ?$$", answer: "9", difficulty: "Medium" },
     { question: "$$\\frac{12}{4} = ?$$", answer: "3", difficulty: "Medium" },
