--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       let questions = [
     null, // インデックス0は使用しないため、nullを設定
     { question: "泉館山高校の校章とは, $27$個の合同な正方形を問題図のように並べたものである. $\\angle{AB\\Gamma}+\\angle{XYZ}$を求めよ. ただし, $\\angle{XYZ}$で$\\angle{XYZ}$の大きさを表すものとする. ", answer: "180", difficulty: "Easy" },
-    { question: "$$10 - 5 = ?$$", answer: "5", difficulty: "Easy" },
+    { question: "縦の長さが$4$, 横の長さが$2$の長方形が問題図のように並んで円に内接している. この円の面積を求めよ. ただし, 求める面積は互いに素な正整数$a,b$と円周率$pi$を用いて$\\frac{a}{b}\\pi$と表せるので, $a+b$を回答してください. ", answer: "89", difficulty: "Easy" },
     { question: "$$3 \\times 3 = ?$$", answer: "9", difficulty: "Medium" },
     { question: "$$\\frac{12}{4} = ?$$", answer: "3", difficulty: "Medium" },
     { question: "$$\\int_0^1 x^2 dx = ?$$", answer: "1/3", difficulty: "Hard" } // 高度な数式の例
