--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
       let questions = [
     null, // インデックス0は使用しないため、nullを設定
     { question: "泉館山高校の校章とは, $27$個の合同な正方形を問題図のように並べたものである. $\\angle{AB\\Gamma}+\\angle{XYZ}$を求めよ. ただし, $\\angle{XYZ}$で$\\angle{XYZ}$の大きさを表すものとする. ", answer: "180", difficulty: "Easy" },
-    { question: "縦の長さが$4$, 横の長さが$2$の長方形が問題図のように並んで円に内接している. この円の面積を求めよ. ただし, 求める面積は互いに素な正整数$a,b$と円周率$pi$を用いて$\\frac{a}{b}\\pi$と表せるので, $a+b$の値を回答してください. ", answer: "89", difficulty: "Easy" },
-    { question: "一辺の長さが$1$の正三角形8つを問題図のように配置し, 各頂点に$1,2,3$のいずれかの数字を置くことを考える. 問題図における一辺の長さが$1$, および$2$の正三角形すべてについて, 三角形の$3$つの頂点に書かれた数の和が等しくなるような数の置き方は何通りか. ", answer: "27", difficulty: "Medium" },
-    { question: "$$\\frac{12}{4} = ?$$", answer: "3", difficulty: "Medium" },
+    { question: "縦の長さが$4$, 横の長さが$2$の長方形が問題図のように並んで円に内接している. この円の面積を求めよ. ただし, 求める面積は互いに素な正整数$a,b$と円周率$\\pi$を用いて$\\cfrac{a}{b}\\pi$と表せるので, $a+b$の値を回答してください. ", answer: "89", difficulty: "Easy" },
+    { question: "一辺の長さが$1$の正三角形8つを問題図のように配置し, 各頂点に$1,2,3$のいずれかの数字を置くことを考える. 問題図における一辺の長さが$1$, および$2$の正三角形すべてについて, 三角形の$3$つの頂点に書かれた数の和が等しくなるような数の置き方は何通りか. ", answer: "27", difficulty: "Easy" },
+    { question: "$0$以外の整数に対して定義され実数値をとる関数$f$であって, 任意の$0$以外の整数$x,y$に対して$$f(x+y)=\\frac{2xyf(x)f(y)}{x+y}$$を満たすものを考える. $f(1)=1$であるとき, $f(41)$の値を求めよ. ただし, 求める値は互いに素な正整数$a,b$と正整数$n$を用いて$\\frac{a^n}{b}$と表せるので, $a+b+n$の値を求めよ. ", answer: "83", difficulty: "Medium" },
     { question: "$$\\int_0^1 x^2 dx = ?$$", answer: "1/3", difficulty: "Hard" } // 高度な数式の例
 ];
 function renderMathJax(contentId) {
