--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     { question: "縦の長さが$4$, 横の長さが$2$の長方形が問題図のように並んで円に内接している. この円の面積を求めよ. ただし, 求める面積は互いに素な正整数$a,b$と円周率$\\pi$を用いて$\\cfrac{a}{b}\\pi$と表せるので, $a+b$の値を回答してください. ", answer: "89", difficulty: "Easy" },
     { question: "一辺の長さが$1$の正三角形8つを問題図のように配置し, 各頂点に$1,2,3$のいずれかの数字を置くことを考える. 問題図における一辺の長さが$1$, および$2$の正三角形すべてについて, 三角形の$3$つの頂点に書かれた数の和が等しくなるような数の置き方は何通りか. ", answer: "27", difficulty: "Easy" },
     { question: "$0$以外の整数に対して定義され実数値をとる関数$f$であって, 任意の$0$以外の整数$x,y$に対して$$f(x+y)=\\frac{2xyf(x)f(y)}{x+y}$$を満たすものを考える. $f(1)=1$であるとき, $f(41)$の値を求めよ. ただし, 求める値は互いに素な正整数$a,b$と正整数$n$を用いて$\\cfrac{a^n}{b}$と表せるので, $a+b+n$の値を求めよ. ", answer: "83", difficulty: "Medium" },
-    { question: "正整数$x,y$を用いて$n=x^2-y^2$と表せない正の整数$n$の全体からなる集合を$N$とする. 集合$N$のある要素$a$であって, $a$より大きい集合$N$の任意の$a'$に対して, $\\cfrac{a}{a'}$が整数となるものの総和を求めよ. ", answer: "3", difficulty: "Hard" }
+    { question: "正整数$x,y$を用いて$n=x^2-y^2$と表せない正の整数$n$の全体からなる集合を$N$とする. 集合$N$のある要素$a$であって, $a$より大きい集合$N$の任意の$a'$に対して, $\\cfrac{a}{a'}$が整数となるものの総和を求めよ. ", answer: "3", difficulty: "Hard" },
     { question: "正二十面体について, 任意の$2$つの頂点を通る直線をすべて引く. このとき, 引いた直線によってできる交点の数を求めよ. ただし, 頂点は交点に含めないものとし, $3$本以上の直線が$1$点で交わるとき, 交点は$1$つと数える. ", answer: "41", difficulty: "Hard" } 
     { question: "$x$を素数$10^9+9$で割った余りを$f(x)$とする. このとき, $$\\sum^{41(10^9+41)_{k=1}f(k^2)}$$を$100$で割った余りを求めよ. ", answer: "76", difficulty: "Expart" } 
 ];
@@ -233,6 +233,10 @@ function checkAnswer() {
     let correctAnswer = questions[currentQuestion].answer;
 
     let userName = prompt("あなたの名前を入力してください:");
+    if (!userName) {
+        alert("名前を入力してください。");
+        return;
+    }
 
     if (!userScores[userName]) {
         userScores[userName] = { score: 0, answers: new Array(questions.length).fill(null), times: new Array(questions.length).fill(null) };
@@ -240,36 +244,36 @@ function checkAnswer() {
 
     if (userAnswer === correctAnswer) {
         alert("正解！");
-        if (correctAnswers[currentQuestion] !== true) { // 初めて正解した場合のみカウント
+        if (correctAnswers[currentQuestion] !== true) {
             correctAnswers[currentQuestion] = true;
             correctCounts[currentQuestion]++;
-            localStorage.setItem('correctCounts', JSON.stringify(correctCounts)); // ローカルストレージに保存
+            localStorage.setItem('correctCounts', JSON.stringify(correctCounts));
         }
 
-        if (userScores[userName].answers[currentQuestion] !== true) { // 初めて正解した場合のみスコアを追加
+        if (userScores[userName].answers[currentQuestion] !== true) {
             userScores[userName].score++;
             userScores[userName].answers[currentQuestion] = true;
             stopTimer();
-            userScores[userName].times[currentQuestion] = userScores[userName].times[currentQuestion] || elapsedTime; // 初回の正解タイムを固定
+            userScores[userName].times[currentQuestion] = userScores[userName].times[currentQuestion] || elapsedTime;
         }
     } else {
         alert("不正解。");
         correctAnswers[currentQuestion] = false;
 
         if (userScores[userName].answers[currentQuestion] !== true) {
-            // 未正解の問題を間違えた場合にペナルティを追加
             userScores[userName].times[currentQuestion] = (userScores[userName].times[currentQuestion] || 0) + penaltyTime;
         }
-        userScores[userName].answers[currentQuestion] = false; // 不正解を記録
+        userScores[userName].answers[currentQuestion] = false;
     }
 
-    localStorage.setItem('userScores', JSON.stringify(userScores)); // ローカルストレージに保存
+    localStorage.setItem('userScores', JSON.stringify(userScores));
 
-    document.getElementById("answer").value = ""; // 解答入力欄をクリア
-    displayCorrectAnswerList(); // 正解状況を表示
-    updateScoreboard(); // スコアボードを更新
-    updateRanking(); // ランキングを更新
+    document.getElementById("answer").value = "";
+    displayCorrectAnswerList();
+    updateScoreboard();
+    updateRanking();
 }
+
 
 function displayCorrectAnswerList() {
     let correctAnswerList = document.getElementById("correct-answer-list");
