--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
       let questions = [
     null, // インデックス0は使用しないため、nullを設定
     { question: "泉館山高校の校章とは, $27$個の合同な正方形を問題図のように並べたものである. $\\angle{AB\\Gamma}+\\angle{XYZ}$を求めよ. ただし, $\\angle{XYZ}$で$\\angle{XYZ}$の大きさを表すものとする. ", answer: "180", difficulty: "Easy" },
-    { question: "縦の長さが$4$, 横の長さが$2$の長方形が問題図のように並んで円に内接している. この円の面積を求めよ. ただし, 求める面積は互いに素な正整数$a,b$と円周率$\\pi$を用いて$\\cfrac{a}{b}\\pi$と表せるので, $a+b$の値を回答してください. ", answer: "89", difficulty: "Easy" },
+    { question: "縦の長さが$4$, 横の長さが$2$の長方形が問題図のように並んで円に内接している. この円の面積を求めよ. ただし, 求める面積は互いに素な正整数$a,b$と円周率$\\pi$を用いて$\\cfrac{a}{b}\\pi$と表せるので, $a+b$の値を求めよ. ", answer: "89", difficulty: "Easy" },
     { question: "一辺の長さが$1$の正三角形8つを問題図のように配置し, 各頂点に$1,2,3$のいずれかの数字を置くことを考える. 問題図における一辺の長さが$1$, および$2$の正三角形すべてについて, 三角形の$3$つの頂点に書かれた数の和が等しくなるような数の置き方は何通りか. ", answer: "27", difficulty: "Easy" },
     { question: "$0$以外の整数に対して定義され実数値をとる関数$f$であって, 任意の$0$以外の整数$x,y$に対して$$f(x+y)=\\frac{2xyf(x)f(y)}{x+y}$$を満たすものを考える. $f(1)=1$であるとき, $f(41)$の値を求めよ. ただし, 求める値は互いに素な正整数$a,b$と正整数$n$を用いて$\\cfrac{a^n}{b}$と表せるので, $a+b+n$の値を求めよ. ", answer: "83", difficulty: "Medium" },
     { question: "正整数$x,y$を用いて$n=x^2-y^2$と表せない正の整数$n$の全体からなる集合を$N$とする. 集合$N$のある要素$a$であって, $a$より大きい集合$N$の任意の$a'$に対して, $\\cfrac{a}{a'}$が整数となるものの総和を求めよ. ", answer: "3", difficulty: "Hard" },
     { question: "正二十面体について, 任意の$2$つの頂点を通る直線をすべて引く. このとき, 引いた直線によってできる交点の数を求めよ. ただし, 頂点は交点に含めないものとし, $3$本以上の直線が$1$点で交わるとき, 交点は$1$つと数える. ", answer: "41", difficulty: "Hard" },
-    { question: "$x$を素数$10^9+9$で割った余りを$f(x)$とする. このとき, $$\\sum_{k=1}^{41(10^9+41)}f(k^2)$$を$100$で割った余りを求めよ. ", answer: "76", difficulty: "Expart" } 
+    { question: "$x$を素数$10^9+9$で割った余りを$f(x)$とする. このとき, $$\\sum_{k=1}^{41(10^9+41)} f(k^2)$$を$100$で割った余りを求めよ. ", answer: "76", difficulty: "Expart" } 
 ];
 function renderMathJax(contentId) {
 
